the universe remains